# an-encoder

./: CMakeLists.txt  LLVM.patch  LLVM.txt  README.md  README.txt
encode/: CMakeLists.txt
encode/runtime/: CMakeLists.txt  anlib.c  idivrem.c  rdtsc.c
encode/scripts/: CMakeLists.txt  cachegrind.sh  callgrind.sh  compare-plots.py  coverage.py  covhisto.py  covplots.py  fault-plots.py  impplots.py  input-plots.py  lenperf.py  meancyc.py  runner.py  testcase.py  utilities.py
encode/scripts/ips/: faults.sh  ips-hist.sh  ips-range.sh  ips.sh
encode/src/: AccuPromoter.cpp  AccumulateRemover.cpp  AllocaHandler.cpp  BoolExtHandler.cpp  CMakeLists.txt  CMakeLists.txt.orig  CallHandler.cpp  CheckInserter.cpp  Coder.cpp  Coder.h  ConstantsEncoder.cpp  CycleCounter.cpp  EncodeDecodeRemover.cpp  GEPExpander.cpp  GEPExpander.h  GEPHandler.cpp  GlobalsEncoder.cpp  Int64Checker.cpp  InterfaceHandler.cpp  Linkage.cpp  MainArgsHandler.cpp  ModuleChecker.cpp  OperationsEncoder.cpp  OperationsExpander.cpp  Parser.cpp  Profile.cpp  Profile.h  ProfileParser.cpp  ProfileParser.h  ProfiledCoder.cpp  ProfiledCoder.h  SExtTrunc.cpp  encode.cpp  encode.cpp.orig
encode/src/coder/: CMakeLists.txt  CallHandler.cpp  CallHandler.h  GEPExpander.cpp  InterfaceHandler.cpp  InterfaceHandler.h  ProfiledCoder.cpp  ProfiledCoder.h
encode/src/parser/: CMakeLists.txt  Parser.cpp  Parser.h  Profile.cpp  Profile.h  ProfileLexer.cpp  ProfileLexer.h
encode/tests/: 25_dijkstra.c  26_crc.c  CMakeLists.txt  array_sum.c  bubblesort.c  buildtest.cmake  matmul.c  matmul_while.c  overflow.c  ptrarith.c  quicksort.c  test.ep
encode/tests/array_sum/: CMakeLists.txt  array_sum.cover.cfg  array_sum.enc.c  array_sum.main.c
encode/tests/bubblesort/: CMakeLists.txt  bubblesort.cover.cfg  bubblesort.main.c
encode/tests/bubblesort.best/: CMakeLists.txt  bubblesort.best.cover.cfg  bubblesort.best.enc.c  bubblesort.best.main.c  bubblesort.best.perf.cfg
encode/tests/bubblesort.random/: CMakeLists.txt  bubblesort.random.cover.cfg
encode/tests/bubblesort.random-binary/: CMakeLists.txt  bubblesort.random-binary.main.c
encode/tests/bubblesort.worst/: CMakeLists.txt  bubblesort.worst.main.c
encode/tests/crc/: CMakeLists.txt  crc.cover.cfg  crc.enc.c  crc.main.c  crc.veri.cfg
encode/tests/des/: CMakeLists.txt  des.enc.c  des.huge.veri.cfg  des.input.huge.txt  des.input.large.txt  des.input.tiny.txt  des.large.veri.cfg  des.main.c  des.tiny.cover.cfg
encode/tests/dijkstra/: CMakeLists.txt  adj.sh  dijkstra.cover.cfg  dijkstra.enc.c  dijkstra.h  dijkstra.main.c
encode/tests/matmul/: CMakeLists.txt  matmul.cover.cfg  matmul.enc.c  matmul.main.c
encode/tests/matmul_overflow/: CMakeLists.txt  matmul_overflow.enc.c  matmul_overflow.main.c  matmul_overflow.veri.cfg
encode/tests/matmul_while/: CMakeLists.txt  matmul_while.enc.c  matmul_while.main.c
encode/tests/mylibs/: CMakeLists.txt  an_builtins.h  encode.h  mycheck.c  mycheck.h  mycrctab.c  mycyc.c  mycyc.h  myrand.c
encode/tests/profiles/: CMakeLists.txt  build_profile_test.cmake
encode/tests/profiles/1/: CMakeLists.txt  test.ep
encode/tests/profiles/2/: CMakeLists.txt  test.ep
encode/tests/profiles/3/: CMakeLists.txt  test.ep
encode/tests/profiles/4/: CMakeLists.txt  test.c  test.ep
encode/tests/profiles/5/: CMakeLists.txt  test.c  test.ep
encode/tests/profiles/6/: CMakeLists.txt  test.ep
encode/tests/profiles/7/: CMakeLists.txt  test.c  test.ep
encode/tests/ptrarith/: CMakeLists.txt  ptrarith.cover.cfg  ptrarith.enc.c  ptrarith.main.c  ptrarith.perf.cfg
encode/tests/quicksort/: CMakeLists.txt  quicksort.cover.cfg  quicksort.main.c  quicksort.precfg
encode/tests/quicksort.best/: CMakeLists.txt  quicksort.best.enc.c  quicksort.best.main.c  quicksort.best.perf.cfg
encode/tests/quicksort.random/: CMakeLists.txt  quicksort.random.cover.cfg
encode/tests/quicksort.random-binary/: CMakeLists.txt  quicksort.random-binary.main.c
encode/tests/quicksort.worst/: CMakeLists.txt  quicksort.worst.main.c
patches/: bfi_DISASM.patch  bfi_MEMLOG.patch  bfi_TXT_mask.patch  bfi_rea602ab1458a.patch
res/ast-results/: processed_results.txt  results.txt  stderr.txt
res/llvm-results/: 20150330.1812.txt  20150330.1819.txt  20150408.1538.txt  20150408.1552.txt  20150408.1600.txt  20150410.1406.txt  array_sum-20.txt
res/llvm-results/2015-04-27_14:35:41/: coverage.summary
res/llvm-results/2015-04-27_15:23:30/: coverage.summary
res/llvm-results/check-placement/res.BEFORE.2/: array_sum  ptrarith  quicksort
res/llvm-results/check-placement/res.BEFORE.3/: array_sum  ptrarith  quicksort
res/llvm-results/check-placement/res.BEFORE.TOGGLE.2/: array_sum  ptrarith  quicksort
res/llvm-results/check-placement/res.FUN.NA.1.2/: array_sum  ptrarith  quicksort
res/llvm-results/check-placement/res.FUN.NA.1.3/: array_sum  ptrarith  quicksort
res/llvm-results/check-placement/res.FUN.NA.1.TOGGLE.2/: array_sum  ptrarith  quicksort
res/llvm-results/check-placement/res.FUN.NA.1.just-add.3/: array_sum  ptrarith  quicksort
res/llvm-results/check-placement/res.FUN.NA.2.2/: array_sum  ptrarith  quicksort
res/llvm-results/check-placement/res.all.BEFORE.movswift.2/: array_sum  ptrarith  quicksort
res/llvm-results/check-placement/res.all.FUN.NA.1.movswift.2/: array_sum  ptrarith  quicksort
res/llvm-results/pathological/2015-04-27_13:22:58/: coverage.summary
res/llvm-results/pathological/2015-05-07_16:27:00/: coverage.summary
res/llvm-results/perf-tests/20150520.range-10-15000/: array_sum.cycles.encoded  bubblesort  bubblesort.slow-down  matmul  matmul.cycles.encoded  matmul.cycles.plain  ptrarith.cycles.plain  quicksort.cycles.encoded  quicksort.cycles.plain
res/llvm-results/perf-tests/20150520.range-10-15000.O2/: array_sum  array_sum.cycles.plain  array_sum.slow-down  bubblesort.cycles.encoded  bubblesort.cycles.plain  matmul.slow-down  ptrarith  ptrarith.cycles.encoded  ptrarith.slow-down  quicksort  quicksort.slow-down
res/llvm-results/perf-tests/20150521.range-10-4000.O2/: array_sum  array_sum.cycles.encoded  array_sum.cycles.plain  array_sum.slow-down  (+12 more)
(+93097 files in other folders)
