cmake_minimum_required(VERSION 2.8)

set(ENCODE_TESTS_BUILD_TYPE "" CACHE STRING "")

add_subdirectory(array_sum)
add_subdirectory(bubblesort)
add_subdirectory(crc)
add_subdirectory(des)
add_subdirectory(dijkstra)
add_subdirectory(matmul)
add_subdirectory(matmul_overflow)
add_subdirectory(matmul_while)
add_subdirectory(ptrarith)
add_subdirectory(quicksort)
